--- a/themes/light.css
+++ b/themes/light.css
@@ -35,11 +35,11 @@ body {
 
 /* Apply squeezed letter spacing to headings and buttons */
 h1 {
-    letter-spacing: -0.09em !important;
+    letter-spacing: -0.11em !important;
 }
 
 h2, h3, h4, h5, h6 {
-    letter-spacing: -0.06em !important;
+    letter-spacing: -0.07em !important;
 }
 
 button {
